// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with external url 1`] = `
<a
  className="test"
  href="http://test"
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "defaultPrevented": false,
            "preventDefault": [MockFunction],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  target="_blank"
>
  test
</a>
`;

exports[`renders correctly with internal url 1`] = `
<NavLink
  activeClassName="active"
  exact={true}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "defaultPrevented": false,
            "preventDefault": [MockFunction],
          },
        ],
        Array [
          Object {
            "defaultPrevented": false,
            "preventDefault": [MockFunction],
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  to="test"
>
  test
</NavLink>
`;
